syntax = "proto3";

option go_package = ".;accountsservice";

package accounts;

service AccountsService {
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {}
}

message OwnerInfo {
  string firstName = 1;
  string lastName = 2;
  string name = 3;
  string type = 4;
}

message UsageRules {
  repeated string allowedFromAccount = 1;
  repeated string allowedToAccount = 2;
  repeated string forbiddenFromAccount = 3;
  repeated string forbiddenToAccount = 4;
}

message Account {
  map<string, string> additionalData = 1;
  int64 balance = 2;
  int64 blockedBalance = 3;
  string category = 4;
  string channel = 5;
  string createdAt = 6;
  string currency = 7;
  string id = 8;
  string lastMovementAt = 9;
  int64 maxBalance = 10;
  string ownerId = 11;
  OwnerInfo ownerInfo = 12;
  string ownerNationalId = 13;
  string ownerType = 14;
  string status = 15;
  string transactionId = 16;
  string type = 17;
  string updatedAt = 18;
  UsageRules usageRules = 19;
}

message GetDocumentRequest {
  string id = 1;
}

message GetDocumentResponse {
  string code = 1;
  string message = 2;
  Account data = 3;
}
